--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "latest"
   },
   "devDependencies": {
-    "nodemon": "latest"
+    "nodemon": "latest",
+    "mocha": "latest"
   }
 }
